--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -31,7 +31,9 @@ jobs:
         run: find . | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
       
       - name: Create pyinstaller package
-        run: pyinstaller --onefile mdPDFinator.py
+        run: |
+          poetry shell
+          pyinstaller --onefile mdPDFinator.py
 
       - name: List files after pyinstaller
         run: find . | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
