--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -19,10 +19,18 @@ jobs:
         with:
           python-version: ${{ vars.PYTHON_VERSION }}
       
+      # - name: Setup Poetry ${{ vars.POETRY_VERSION }}
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install poetry==${{ vars.POETRY_VERSION }}
+
       - name: Setup Poetry ${{ vars.POETRY_VERSION }}
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry==${{ vars.POETRY_VERSION }}
+        uses: snok/install-poetry@v1
+        with:
+          version: ${{ vars.POETRY_VERSION }}
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
 
       - name: Install depencencies
         run: poetry install --with prod
@@ -31,9 +39,7 @@ jobs:
         run: find . | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
       
       - name: Create pyinstaller package
-        run: |
-          poetry shell
-          pyinstaller --onefile mdPDFinator.py
+        run: pyinstaller --onefile mdPDFinator.py
 
       - name: List files after pyinstaller
         run: find . | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
