--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -45,22 +45,33 @@ jobs:
     
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-11, windows-2019]
+        os: [ubuntu-20.04, macos-11]
     runs-on: ${{ matrix.os }}
 
     steps:
 
+      - name: Download the binary
+        uses: actions/download-artifact@v3
+        with:
+          name: executable-${{ runner.os }}
+
+      - name: List contents
+        run: ls
+
       - name: Install weasyprint (Linux)
         if: ${{ runner.os == 'Linux' }}
-        run: sudo apt install weasyprint
+        run: |
+          chmod 775 mdPDFinator
+          sudo apt install weasyprint
 
       - name: Install weasyprint (macOS)
         if: ${{ runner.os == 'macOS' }}
-        run: brew install weasyprint
+        run: |
+          chmod 775 mdPDFinator
+          brew install weasyprint
 
       - name: Test it out
         run: |
-          cd dist
           ./mdPDFinator ../.github/README.md
 
       - name: Upload the converted PDF file
