--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -87,20 +87,35 @@ jobs:
     needs:
       - build-binaries
       - test-binaries
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [Linux, macOS, Windows]
     permissions:
       contents: write
     runs-on: ubuntu-latest
 
     steps:
 
-      - name: Download the binary
+      - name: Download the binary (Linux)
         uses: actions/download-artifact@v3
         with:
-          name: executable-${{ runner.os }}
+          name: executable-Linux
+
+      - name: Rename execuatable (Linux)
+        run: mv mdPDFinator mdPDFinator-Linux
+
+      - name: Download the binary (macOS)
+        uses: actions/download-artifact@v3
+        with:
+          name: executable-macOS
+
+      - name: Rename execuatable (macOS)
+        run: mv mdPDFinator mdPDFinator-macOS
+
+      - name: Download the binary (Windows)
+        uses: actions/download-artifact@v3
+        with:
+          name: executable-Windows
+
+      - name: Rename execuatable (Windows)
+        run: mv mdPDFinator.exe mdPDFinator-Windows.exe
 
       - name: Pre-Release the version
         if: github.ref != 'refs/heads/stable'
