--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -46,7 +46,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -71,6 +71,13 @@ jobs:
         run: |
           chmod 775 mdPDFinator
           brew install weasyprint
+
+      - name: Install weasyprint (Windows)
+        if: ${{ runner.os == 'Windows' }}
+        run: |
+          git clone ${{ vars.GTK_REPO }} GTK
+          $Env:PATH += "$PWD\GTK\gtk-nsis-pack\bin"
+          echo "$PWD\GTK\gtk-nsis-pack\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Test it out
         run: |
