added github so it can pull the README

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -108,7 +108,9 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v3
         with:
-          sparse-checkout: docker
+          sparse-checkout: |
+            docker
+            .github
 
       - name: Download the binary (Linux)
         uses: actions/download-artifact@v3
