--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -170,6 +170,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: ${{ github.repository }}
           short-description: ${{ vars.DOCKER_HUB_DESCRIPTION }}
+          readme-filepath: ${{ vars.README_FILE_PATH }}
 
   release-binaries:
 
