--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -76,10 +76,7 @@ jobs:
 
       - name: Install weasyprint (Windows)
         if: ${{ runner.os == 'Windows' }}
-        run: |
-          git clone ${{ vars.GTK_REPO }} GTK
-          $Env:PATH += "$PWD\GTK\gtk-nsis-pack\bin"
-          echo "$PWD\GTK\gtk-nsis-pack\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        uses: yjpictures/GTK-Windows@v1
 
       - name: Test it out
         run: |
